--- a/css/style.css
+++ b/css/style.css
@@ -318,11 +318,11 @@ header .intro-text {
 /* Contact Section */
 #contact {
 	padding: 100px 0;
-	background: #333;
+	background: #b4ddff	;
 }
 #contact .contact-item p {
 	font-size: 15px;
-	color: #777;
+	color: #000;
 }
 #contact .section-title {
 	margin-top: 60px;
@@ -336,7 +336,7 @@ header .intro-text {
 	text-transform: uppercase;
 	font-size: 18px;
 	font-weight: 400;
-	color: #aaa;
+	color: #000;
 	padding: 20px 0;
 }
 #contact h3::after {
@@ -406,7 +406,7 @@ color: #999;
 }
 /* Footer Section*/
 #footer {
-	background: #262626;
+	background: #48a2ef;
 	padding: 40px 0 20px 0;
 }
 #footer .social {
@@ -424,15 +424,15 @@ color: #999;
 	transition: all 0.3s;
 }
 #footer .social i.fa:hover {
-	color: #eee;
+	color: #fff;
 }
 #footer p {
 	font-size: 14px;
-	color: #666;
+	color: #fff;
 }
 #footer a {
-	color: #999;
+	color: #fff;
 }
 #footer a:hover {
-	color: #eee;
+	color: #fff;
 }
